# rag-milvus-enterprise

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample.txt
.github/workflows/: deploy-dev.yml  deploy-rag-api-gateway.yml
benchmarks/ai/results/: hybrid_ivf_flat_topk_10.json  hybrid_ivf_flat_topk_20.json  hybrid_ivf_flat_topk_5.json  vector_ivf_flat_topk_10.json  vector_ivf_flat_topk_20.json  vector_ivf_flat_topk_5.json
docker/: api_gateway.Dockerfile
docs/: interview-rag.md  roadmap-rag.md
infra/terraform/app/: main.tf  outputs.tf  variables.tf
infra/terraform/app/rag-api-gateway/: main.tf  variables.tf
infra/terraform/envs/dev/: ecs.tf  github-oidc.tf  https.tf.disabled  main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
libs/caching/: query_cache.py
libs/chunking/: base.py  text_chunker.py
libs/db/: milvus_client.py
libs/embedding/: base.py  dummy.py  factory.py
libs/logging/: query_logger.py  structured_logger.py
libs/retriever/: rrf.py
scripts/: bench_query.py  e2e_test.py  init_collection.py  load_demo_corpus.py  load_test_corpus.py
scripts/bench/: run_hybrid_bench.py  run_vector_bench.py
services/api_gateway/: main.py
services/embedding_worker/: main.py  worker.py
services/retriever/: bm25_retriever.py  hybrid_retriever.py  rerank.py  vector_retriever.py
tests/: test_chunking.py  test_query_cache.py  test_retriever_vector.py  test_rrf.py
(+11 files in other folders)
