[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
exclude = ["infra/", "docs/", "scripts/"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["services", "libs"]
combine-as-imports = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
